# SYCLhash

./: CMakeLists.txt  Config.cmake.in  build.sh  crusher.rst
cmake/: install.cmake  rpath.cmake
docs/: CMakeLists.txt  Doxyfile.in  allocator.rst  conf.py  hash.rst  index.rst  installing.rst
include/syclhash/: alloc.hpp  base.hpp  config.hpp.in  hash.hpp
tests/: CMakeLists.txt  alloc.cpp  hash.cpp  num.cpp
